feat: deploy to brew

--- a/.github/workflows/deploy-brew.yaml
+++ b/.github/workflows/deploy-brew.yaml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
       
     - name: Build Release
-      run: make build-releasebuildMacOS
+      run: make buildMacOS
 
     - name: Get version
       id: get_version
