--- a/.github/workflows/deploy-brew.yaml
+++ b/.github/workflows/deploy-brew.yaml
@@ -10,9 +10,12 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-      
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
     - name: Build Release
-      run: make buildMacOS
+      run: make clean compile buildMacOS
 
     - name: Get version
       id: get_version
