--- a/.github/workflows/deploy-brew.yaml
+++ b/.github/workflows/deploy-brew.yaml
@@ -14,6 +14,9 @@ jobs:
       with:
         node-version: '14'
 
+    - name: Install ncc
+      run: npm i -g @vercel/ncc
+
     - name: Install dependencies
       run: yarn
 
