feat: fix run workflow when success

--- a/.github/workflows/deploy-to-homebrew.yaml
+++ b/.github/workflows/deploy-to-homebrew.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs: 
   deploy-macOS-version-to-homebrew:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: macos-latest
     steps:
       - name: Get version
