--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,11 +18,14 @@ jobs:
     - name: Install ncc and pkg for build 
       run: npm i -g @vercel/ncc pkg
 
+    - name: Build for testing
+      run: rm -rf bin && yarn build
+
     - name: Install dependencies
       run: yarn
 
     - name: Run test
-      run: yarn test --coverage
+      run: yarn test --coverage --coverageDirectory='coverage'
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
