--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -1,12 +1,18 @@
 name: Build and Release
 
 on:
+  workflow_run:
+    workflows: 
+      - Test
+    types:
+      - completed
   push:
     tags:
       - '*'
 
 jobs: 
   release:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
