--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -9,9 +9,13 @@ on:
 
 jobs: 
   release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }} && startsWith(github.ref, 'refs/tags')
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
+    - name: Check is tag
+      if: startsWith(github.ref, 'refs/tags/')
+      run: echo "Build for tag"
+    
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
