--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -1,21 +1,14 @@
 name: Build and Release
 
 on:
-  workflow_run:
-    workflows: 
-      - Test
-    types:
-      - completed
+  push:
+    tags:
+      - '*'
 
 jobs: 
   release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    steps:
-    - name: Check is tag
-      if: startsWith(github.ref, 'refs/tags/')
-      run: echo "Build for tag"
-    
+    steps:    
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
